# Changelog
The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/).


## [0.0.1] - 2021-01-04
### Added
- TODO
- appunti
- changelog
- terrain generator

### Changed
- changed tilesheet (20x20)
- disabled room generation
- changed palette


## [0.0.0] - 2021-01-04
### Added
Completed libtcod Python tutorial (http://rogueliketutorials.com/tutorials/tcod/v2/).