@@ -169,3 +169,24 @@ class Item(Entity):
 		if self.equippable:
 			self.equippable.parent = self
 
+
+
+class Site(Entity):
+	def __init__(
+		self,
+		*,
+		x: int = 0,
+		y: int = 0,
+		char: str = "?",
+		color: Tuple[int, int, int] = (0, 0, 255),
+		name: str = "<Unnamed>",
+	):
+		super().__init__(
+			x=x,
+			y=y,
+			char=char,
+			color=color,
+			name=name,
+			blocks_movement=True,
+			render_order=RenderOrder.SITE,
+		)
