@@ -2,6 +2,7 @@ from enum import auto, Enum
 
 
 class RenderOrder(Enum):
+	SITE = auto()
 	CORPSE = auto()
 	ITEM = auto()
 	ACTOR = auto()
